--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "xgutils"]
-	path = xgutils
-	url = https://github.com/QhelDIV/xgutils
+#[submodule "xgutils"]
+#	path = xgutils
+#	url = https://github.com/QhelDIV/xgutils
